--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,19 +7,22 @@ jobs:
       - run: make test-image
       - run: make test-unit
   acceptance:
-    docker:
-        # This image is build from test/docker/Test.dockerfile
-        - image: hashicorpdev/vault-helm-test:0.1.0
-
+    machine: true
     steps:
         - checkout
-        - setup_remote_docker
         - run:
             name: setup kind
             command: |
+                curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+                chmod +x ./kubectl
+                mv ./kubectl /usr/local/bin/kubectl
+                curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
                 curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.8.0/kind-linux-amd64
                 chmod +x ./kind
                 mv ./kind /usr/local/bin/kind
+                curl -sSL https://github.com/bats-core/bats-core/archive/v1.1.0.tar.gz -o /tmp/bats.tgz
+                tar -zxf /tmp/bats.tgz -C /tmp
+                /bin/bash /tmp/bats-core-$BATS_VERSION/install.sh /usr/local
         - run:
             name: Run acceptance tests
             command: |
