--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             command: |
                 curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
                 chmod +x ./kubectl
-                mv ./kubectl /usr/local/bin/kubectl
+                sudo mv ./kubectl /usr/local/bin/kubectl
                 curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
                 curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.8.0/kind-linux-amd64
                 chmod +x ./kind
