--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
                 curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
                 curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.8.0/kind-linux-amd64
                 chmod +x ./kind
-                mv ./kind /usr/local/bin/kind
+                sudo mv ./kind /usr/local/bin/kind
                 curl -sSL https://github.com/bats-core/bats-core/archive/v1.1.0.tar.gz -o /tmp/bats.tgz
                 tar -zxf /tmp/bats.tgz -C /tmp
                 /bin/bash /tmp/bats-core-$BATS_VERSION/install.sh /usr/local
